--- a/Drug/add.html
+++ b/Drug/add.html
@@ -43,7 +43,7 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">价格</label>
                         <div class="layui-input-block">
-                            <input type="password" name="price" required lay-verify="required" autocomplete="off"
+                            <input type="text" name="price" required lay-verify="required" autocomplete="off"
                                    placeholder="请输入价格" class="layui-input">
                         </div>
                     </div>
