--- a/Drug/add.html
+++ b/Drug/add.html
@@ -27,10 +27,10 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">类别</label>
                         <div class="layui-input-block">
-                            <!-- 处方药、非处方药 -->
-                            <select name="type" id="typeSelect">
-                                <option value=""></option>
-                            </select>
+                            <div class="layui-input-block">
+                                <input checked name="type" title="处方药" type="radio" value="0">
+                                <input name="type" title="非处方药" type="radio" value="1">
+                            </div>
                         </div>
                     </div>
                     <div class="layui-form-item">
